--- a/ios-translate-Info.plist
+++ b/ios-translate-Info.plist
@@ -5,7 +5,7 @@
 	<key>SUEnableInstallerLauncherService</key>
 	<true/>
 	<key>SUFeedURL</key>
-	<string></string>
+	<string>https://thuyetngocluong.github.io/testupdateapp/appcast.xml</string>
 	<key>SUPublicEDKey</key>
 	<string>tysawdjtgOrVw9a72l5JkUHeZbgVZWphhkIFjX5+iq8=</string>
 </dict>
